# Zadania_1

./: README.md  Zadanie_1.cpp  Zadanie_6.cpp  compile.sh
Projekt_koncowy/: CMakeLists.txt  bishop.cpp  bishop.h  board.cpp  board.h  game.cpp  game.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  piece.cpp  piece.h  player.cpp  player.h  queen.cpp  queen.h  restrictedPiece.cpp  restrictedPiece.h  rook.cpp  rook.h  square.cpp  square.h
_Zadania_1/: Zad_1.c  Zad_2.c  Zad_3.c  Zad_4.c  Zad_5.c  Zad_6.c
_Zadania_2/: Zad_1.c  Zad_2.c  Zad_3.c  Zad_4.c  Zad_5.c
_Zadania_3/: Zad_1.c  Zad_2.c
_Zadania_4/: Zad_1.c  Zad_2.c  Zad_3.c
_Zadania_5/: Zad.c
_Zadania_6/: Zad_1.c  Zad_2.c  Zad_3.c
_Zadania_7/: Zad_1.c  Zad_2.c
_Zadania_7_C++/: Zad_1.cpp  Zad_2.cpp
